@@ -1,6 +1,9 @@
 # ChangeLog file for MonetDB
 # This file is updated with Maddlog
 
+* Wed Jul  6 2016 Sjoerd Mullender <sjoerd@acm.org>
+- Removed BATderiveTailProps.  Use BATderiveProps instead.
+
 * Fri Jul  1 2016 Sjoerd Mullender <sjoerd@acm.org>
 - Removed the macro BUNfirst.  It can be replaced by 0.
 
